<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_activity">Navigation Activity</string>
    <string name="app_name">Travel Journal</string>
    <string name="trip_name">Trip Name</string>
    <string name="type_in_the_trip_name">Type in the trip name</string>
    <string name="destination">Destination</string>
    <string name="type_in_the_destination">Type in the destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="see_side">See Side</string>
    <string name="mountains">Mountains</string>
    <string name="price">Price</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="rating">Rating</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="take_photo">Take Photo</string>

    <string name="single_click">Single click</string>
    <string name="long_click">Long click</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tabacitu_bianca">Tabacitu Bianca</string>
</resources>
