<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageTripActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="118dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/start_date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/start_date" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="118dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/trip_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/trip_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="118dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/trip_type"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/trip_type" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="118dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/price"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="118dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/end_date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/end_date" />

    <EditText
        android:id="@+id/editTextTripName"
        android:layout_width="339dp"
        android:layout_height="58dp"
        android:drawableStart="@drawable/ic_edit_location_black_24dp"
        android:drawableLeft="@drawable/ic_edit_location_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/type_in_the_destination"
        android:inputType="textPersonName"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="339dp"
        android:layout_height="58dp"
        android:drawableStart="@drawable/ic_text_fields_black_24dp"
        android:drawableLeft="@drawable/ic_text_fields_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/type_in_the_trip_name"
        android:inputType="textPersonName"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="119dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/destination"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/destination" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_break" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_side" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="304dp"
        android:layout_height="22dp"
        android:max="100"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:onClick="displayDatePickOnClick"
        android:id="@+id/start_date"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:text="@string/dd_mm_yy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/end_date"
        android:onClick="displayDatePickOnClick2"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/dd_mm_yy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/start_date"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="244dp"
        android:layout_height="56dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date" />

    <Button
        android:onClick="sendInfoToNavigation"
        android:id="@+id/save"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#8BC34A"
        android:text="Save"
        android:textColor="#FFFDFD"
        android:textColorHint="#85407E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_gallery_photo" />

    <Button
        android:onClick="loadPictureFromGallery"
        android:id="@+id/select_gallery_photo"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_photo_camera" />

    <Button
        android:onClick="openCameraIntentOnClick"
        android:id="@+id/take_photo_camera"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginEnd="244dp"
        android:layout_marginRight="244dp"
        android:text="@string/take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="126dp"
        android:layout_height="106dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/take_photo_camera"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:srcCompat="@drawable/android" />
</android.support.constraint.ConstraintLayout>